general syntax fix

--- a/04-WeekFour/bootstrap-blog/index.html
+++ b/04-WeekFour/bootstrap-blog/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="tr">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -9,12 +10,14 @@
     <!-- Custom CSS -->
     <link rel="stylesheet" href="style.css">
 </head>
+
 <body class="d-flex flex-column min-vh-100">
     <!-- Navigation bar -->
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
         <div class="container">
             <a class="navbar-brand" href="index.html">Tekno Blog</a>
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+                aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse" id="navbarNav">
@@ -40,7 +43,8 @@
     <div class="jumbotron jumbotron-fluid bg-light">
         <div class="container py-5">
             <h1 class="display-4">Tekno Blog'a Hoş Geldiniz</h1>
-            <p class="lead">En güncel teknoloji haberleri, ürün incelemeleri ve daha fazlası için doğru adrestesiniz.</p>
+            <p class="lead">En güncel teknoloji haberleri, ürün incelemeleri ve daha fazlası için doğru adrestesiniz.
+            </p>
         </div>
     </div>
 
@@ -53,7 +57,8 @@
                     <img src="https://picsum.photos/seed/post1/350/200" class="card-img-top" alt="Blog post image">
                     <div class="card-body">
                         <h5 class="card-title">Yeni iPhone Modeli Tanıtıldı</h5>
-                        <p class="card-text">Apple, en son iPhone modelini duyurdu. İşte yeni cihazın özellikleri ve fiyatı.</p>
+                        <p class="card-text">Apple, en son iPhone modelini duyurdu. İşte yeni cihazın özellikleri ve
+                            fiyatı.</p>
                         <a href="#" class="btn btn-primary">Devamını Oku</a>
                     </div>
                 </div>
@@ -64,7 +69,8 @@
                     <img src="https://picsum.photos/seed/post2/350/200" class="card-img-top" alt="Blog post image">
                     <div class="card-body">
                         <h5 class="card-title">Yapay Zeka Dünyayı Nasıl Değiştiriyor?</h5>
-                        <p class="card-text">Yapay zeka teknolojilerinin günlük hayatımıza etkileri ve geleceğe dair öngörüler.</p>
+                        <p class="card-text">Yapay zeka teknolojilerinin günlük hayatımıza etkileri ve geleceğe dair
+                            öngörüler.</p>
                         <a href="#" class="btn btn-primary">Devamını Oku</a>
                     </div>
                 </div>
@@ -75,7 +81,8 @@
                     <img src="https://picsum.photos/seed/post3/350/200" class="card-img-top" alt="Blog post image">
                     <div class="card-body">
                         <h5 class="card-title">En İyi Oyun Bilgisayarları</h5>
-                        <p class="card-text">2024'ün en iyi performans sunan oyun bilgisayarlarını inceledik ve karşılaştırdık.</p>
+                        <p class="card-text">2024'ün en iyi performans sunan oyun bilgisayarlarını inceledik ve
+                            karşılaştırdık.</p>
                         <a href="#" class="btn btn-primary">Devamını Oku</a>
                     </div>
                 </div>
@@ -91,4 +98,5 @@
     <!-- Bootstrap JS -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"></script>
 </body>
+
 </html>
