--- a/04-WeekFour/bootstrap-linkedin-clone/index.html
+++ b/04-WeekFour/bootstrap-linkedin-clone/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -11,6 +12,7 @@
     <!-- Custom CSS -->
     <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
     <!-- Navigation bar -->
     <nav class="navbar navbar-expand-lg navbar-light bg-white border-bottom fixed-top">
@@ -21,7 +23,8 @@
             <div class="d-flex flex-grow-1 mx-lg-5">
                 <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
             </div>
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+                aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse" id="navbarNav">
@@ -42,13 +45,16 @@
                         <a class="nav-link" href="#"><i class="fas fa-bell"></i> Notifications</a>
                     </li>
                     <li class="nav-item dropdown">
-                        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
+                            data-bs-toggle="dropdown" aria-expanded="false">
                             <img src="https://picsum.photos/id/345/30/30" class="rounded-circle" alt="Profile">
                         </a>
                         <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
                             <li><a class="dropdown-item" href="#">View Profile</a></li>
                             <li><a class="dropdown-item" href="#">Settings & Privacy</a></li>
-                            <li><hr class="dropdown-divider"></li>
+                            <li>
+                                <hr class="dropdown-divider">
+                            </li>
                             <li><a class="dropdown-item" href="#">Sign Out</a></li>
                         </ul>
                     </li>
@@ -65,7 +71,8 @@
                 <div class="card mb-3">
                     <img src="https://picsum.photos/id/234/300/100" class="card-img-top" alt="Profile background">
                     <div class="card-body text-center position-relative">
-                        <img src="https://picsum.photos/id/345/100/100" class="rounded-circle profile-image" alt="Profile picture">
+                        <img src="https://picsum.photos/id/345/100/100" class="rounded-circle profile-image"
+                            alt="Profile picture">
                         <h5 class="card-title mt-3">John Doe</h5>
                         <p class="card-text">Software Developer at TechCorp</p>
                         <hr>
@@ -83,14 +90,19 @@
                     <div class="card-body">
                         <h6 class="card-title">Recent</h6>
                         <ul class="list-unstyled">
-                            <li><a href="#" class="text-decoration-none text-muted"><i class="fas fa-users me-2"></i>Web Development Group</a></li>
-                            <li><a href="#" class="text-decoration-none text-muted"><i class="fas fa-hashtag me-2"></i>javascript</a></li>
-                            <li><a href="#" class="text-decoration-none text-muted"><i class="fas fa-building me-2"></i>TechCorp</a></li>
+                            <li><a href="#" class="text-decoration-none text-muted"><i class="fas fa-users me-2"></i>Web
+                                    Development Group</a></li>
+                            <li><a href="#" class="text-decoration-none text-muted"><i
+                                        class="fas fa-hashtag me-2"></i>javascript</a></li>
+                            <li><a href="#" class="text-decoration-none text-muted"><i
+                                        class="fas fa-building me-2"></i>TechCorp</a></li>
                         </ul>
                         <h6 class="card-title mt-3">Groups</h6>
                         <ul class="list-unstyled">
-                            <li><a href="#" class="text-decoration-none text-muted"><i class="fas fa-users me-2"></i>Tech Professionals</a></li>
-                            <li><a href="#" class="text-decoration-none text-muted"><i class="fas fa-users me-2"></i>Startup Founders</a></li>
+                            <li><a href="#" class="text-decoration-none text-muted"><i
+                                        class="fas fa-users me-2"></i>Tech Professionals</a></li>
+                            <li><a href="#" class="text-decoration-none text-muted"><i
+                                        class="fas fa-users me-2"></i>Startup Founders</a></li>
                         </ul>
                     </div>
                 </div>
@@ -106,10 +118,14 @@
                             <input type="text" class="form-control rounded-pill" placeholder="Start a post">
                         </div>
                         <div class="mt-3">
-                            <button class="btn btn-outline-secondary me-2"><i class="fas fa-image text-primary"></i> Photo</button>
-                            <button class="btn btn-outline-secondary me-2"><i class="fas fa-video text-success"></i> Video</button>
-                            <button class="btn btn-outline-secondary me-2"><i class="fas fa-calendar-alt text-warning"></i> Event</button>
-                            <button class="btn btn-outline-secondary"><i class="fas fa-newspaper text-danger"></i> Write article</button>
+                            <button class="btn btn-outline-secondary me-2"><i class="fas fa-image text-primary"></i>
+                                Photo</button>
+                            <button class="btn btn-outline-secondary me-2"><i class="fas fa-video text-success"></i>
+                                Video</button>
+                            <button class="btn btn-outline-secondary me-2"><i
+                                    class="fas fa-calendar-alt text-warning"></i> Event</button>
+                            <button class="btn btn-outline-secondary"><i class="fas fa-newspaper text-danger"></i> Write
+                                article</button>
                         </div>
                     </div>
                 </div>
@@ -125,7 +141,8 @@
                                 <p class="text-muted small">2h • <i class="fas fa-globe-americas"></i></p>
                             </div>
                         </div>
-                        <p>Excited to announce our new product launch! Stay tuned for more details. #NewProduct #Innovation</p>
+                        <p>Excited to announce our new product launch! Stay tuned for more details. #NewProduct
+                            #Innovation</p>
                         <img src="https://picsum.photos/id/567/500/300" class="img-fluid mb-3 rounded" alt="Post image">
                         <div class="d-flex justify-content-between align-items-center">
                             <div>
@@ -137,10 +154,13 @@
                         </div>
                         <hr>
                         <div class="d-flex justify-content-between">
-                            <button class="btn btn-sm btn-outline-secondary"><i class="fas fa-thumbs-up"></i> Like</button>
-                            <button class="btn btn-sm btn-outline-secondary"><i class="fas fa-comment"></i> Comment</button>
+                            <button class="btn btn-sm btn-outline-secondary"><i class="fas fa-thumbs-up"></i>
+                                Like</button>
+                            <button class="btn btn-sm btn-outline-secondary"><i class="fas fa-comment"></i>
+                                Comment</button>
                             <button class="btn btn-sm btn-outline-secondary"><i class="fas fa-share"></i> Share</button>
-                            <button class="btn btn-sm btn-outline-secondary"><i class="fas fa-paper-plane"></i> Send</button>
+                            <button class="btn btn-sm btn-outline-secondary"><i class="fas fa-paper-plane"></i>
+                                Send</button>
                         </div>
                     </div>
                 </div>
@@ -155,7 +175,8 @@
                                 <p class="text-muted small">1d • <i class="fas fa-globe-americas"></i></p>
                             </div>
                         </div>
-                        <p>We're hiring! Check out our latest job openings for software developers and UX designers. #TechJobs #Hiring</p>
+                        <p>We're hiring! Check out our latest job openings for software developers and UX designers.
+                            #TechJobs #Hiring</p>
                         <div class="d-flex justify-content-between align-items-center">
                             <div>
                                 <i class="fas fa-thumbs-up text-primary"></i>
@@ -166,10 +187,13 @@
                         </div>
                         <hr>
                         <div class="d-flex justify-content-between">
-                            <button class="btn btn-sm btn-outline-secondary"><i class="fas fa-thumbs-up"></i> Like</button>
-                            <button class="btn btn-sm btn-outline-secondary"><i class="fas fa-comment"></i> Comment</button>
+                            <button class="btn btn-sm btn-outline-secondary"><i class="fas fa-thumbs-up"></i>
+                                Like</button>
+                            <button class="btn btn-sm btn-outline-secondary"><i class="fas fa-comment"></i>
+                                Comment</button>
                             <button class="btn btn-sm btn-outline-secondary"><i class="fas fa-share"></i> Share</button>
-                            <button class="btn btn-sm btn-outline-secondary"><i class="fas fa-paper-plane"></i> Send</button>
+                            <button class="btn btn-sm btn-outline-secondary"><i class="fas fa-paper-plane"></i>
+                                Send</button>
                         </div>
                     </div>
                 </div>
@@ -181,27 +205,33 @@
                     <div class="card-body">
                         <h5 class="card-title">Add to your feed</h5>
                         <div class="d-flex mb-3">
-                            <img src="https://picsum.photos/id/678/40/40" class="rounded-circle me-2" alt="Suggested connection">
+                            <img src="https://picsum.photos/id/678/40/40" class="rounded-circle me-2"
+                                alt="Suggested connection">
                             <div>
                                 <h6 class="mb-0">Tech Company Inc.</h6>
                                 <p class="text-muted small">Company • Technology</p>
-                                <button class="btn btn-sm btn-outline-primary rounded-pill"><i class="fas fa-plus"></i> Follow</button>
+                                <button class="btn btn-sm btn-outline-primary rounded-pill"><i class="fas fa-plus"></i>
+                                    Follow</button>
                             </div>
                         </div>
                         <div class="d-flex mb-3">
-                            <img src="https://picsum.photos/id/789/40/40" class="rounded-circle me-2" alt="Suggested connection">
+                            <img src="https://picsum.photos/id/789/40/40" class="rounded-circle me-2"
+                                alt="Suggested connection">
                             <div>
                                 <h6 class="mb-0">Sarah Johnson</h6>
                                 <p class="text-muted small">Web Developer at WebTech</p>
-                                <button class="btn btn-sm btn-outline-primary rounded-pill"><i class="fas fa-plus"></i> Connect</button>
+                                <button class="btn btn-sm btn-outline-primary rounded-pill"><i class="fas fa-plus"></i>
+                                    Connect</button>
                             </div>
                         </div>
                         <div class="d-flex">
-                            <img src="https://picsum.photos/id/890/40/40" class="rounded-circle me-2" alt="Suggested connection">
+                            <img src="https://picsum.photos/id/890/40/40" class="rounded-circle me-2"
+                                alt="Suggested connection">
                             <div>
                                 <h6 class="mb-0">Digital Marketing Group</h6>
                                 <p class="text-muted small">Group • Marketing</p>
-                                <button class="btn btn-sm btn-outline-primary rounded-pill"><i class="fas fa-plus"></i> Join</button>
+                                <button class="btn btn-sm btn-outline-primary rounded-pill"><i class="fas fa-plus"></i>
+                                    Join</button>
                             </div>
                         </div>
                     </div>
@@ -253,3 +283,12 @@
                     <h6 class="text-uppercase fw-bold mb-2">Solutions</h6>
                     <ul class="list-unstyled">
                         <li><a href="#" class="text-muted">Marketing</a></li>
+                    </ul>
+                </div>
+            </div>
+        </div>
+    </footer>
+
+</body>
+
+</html>
