--- a/04-WeekFour/bootstrap-instagram-clone/index.html
+++ b/04-WeekFour/bootstrap-instagram-clone/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="tr">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -11,13 +12,15 @@
     <!-- Custom CSS for additional styling -->
     <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
     <!-- Navbar: Fixed top, white background, bottom border -->
     <nav class="navbar navbar-expand-sm navbar-light bg-white border-bottom fixed-top">
         <div class="container">
             <!-- Instagram logo -->
             <a class="navbar-brand" href="#">
-                <img src="https://www.instagram.com/static/images/web/mobile_nav_type_logo.png/735145cfe0a4.png" alt="Instagram" height="29">
+                <img src="https://www.instagram.com/static/images/web/mobile_nav_type_logo.png/735145cfe0a4.png"
+                    alt="Instagram" height="29">
             </a>
             <!-- Search form -->
             <form class="d-flex ms-5">
@@ -30,7 +33,8 @@
                 <a href="#" class="nav-link px-2"><i class="far fa-compass fa-lg"></i></a>
                 <a href="#" class="nav-link px-2"><i class="far fa-heart fa-lg"></i></a>
                 <a href="#" class="nav-link px-2">
-                    <img src="https://picsum.photos/id/48/22" alt="Profile" class="rounded-circle" width="22" height="22">
+                    <img src="https://picsum.photos/id/48/22" alt="Profile" class="rounded-circle" width="22"
+                        height="22">
                 </a>
             </div>
         </div>
@@ -46,19 +50,21 @@
                     <div class="card-body d-flex overflow-auto">
                         <!-- Story item -->
                         <div class="text-center me-3">
-                            <img src="https://picsum.photos/id/1027/60" alt="user1" class="rounded-circle border border-3 border-primary" width="60" height="60">
+                            <img src="https://picsum.photos/id/1027/60" alt="user1"
+                                class="rounded-circle border border-3 border-primary" width="60" height="60">
                             <p class="small mt-1">ahmetcan</p>
                         </div>
                         <!-- More story items can be added here -->
                     </div>
                 </div>
-                
+
                 <!-- Post -->
                 <div class="card mb-4">
                     <!-- Post header: user info and options -->
                     <div class="card-header bg-white d-flex justify-content-between align-items-center">
                         <div class="d-flex align-items-center">
-                            <img src="https://picsum.photos/id/1027/40" alt="ahmetcan" class="rounded-circle me-2" width="40" height="40">
+                            <img src="https://picsum.photos/id/1027/40" alt="ahmetcan" class="rounded-circle me-2"
+                                width="40" height="40">
                             <span class="fw-bold">ahmetcan</span>
                         </div>
                         <i class="fas fa-ellipsis-h"></i>
@@ -78,7 +84,8 @@
                         <!-- Like count -->
                         <p class="fw-bold mb-1">2,547 beğenme</p>
                         <!-- Post caption -->
-                        <p class="card-text"><span class="fw-bold">ahmetcan</span> Harika bir manzara eşliğinde huzurlu bir gün!</p>
+                        <p class="card-text"><span class="fw-bold">ahmetcan</span> Harika bir manzara eşliğinde huzurlu
+                            bir gün!</p>
                         <!-- Comments -->
                         <p class="text-muted small mb-1">15 yorumun tümünü gör</p>
                         <p class="card-text"><span class="fw-bold">elifnaz</span> Çok güzel görünüyor!</p>
@@ -102,7 +109,8 @@
                 <div class="rightpanel">
                     <!-- User profile -->
                     <div class="d-flex align-items-center mb-4">
-                        <img src="https://picsum.photos/id/48/60" alt="User" class="rounded-circle me-3" width="60" height="60">
+                        <img src="https://picsum.photos/id/48/60" alt="User" class="rounded-circle me-3" width="60"
+                            height="60">
                         <div>
                             <h6 class="mb-0">emrebeyy</h6>
                             <small class="text-muted">Emre Bey</small>
@@ -119,7 +127,8 @@
                         <!-- Suggestion item -->
                         <div class="d-flex justify-content-between align-items-center mb-2">
                             <div class="d-flex align-items-center">
-                                <img src="https://picsum.photos/id/1025/40" alt="Suggestion" class="rounded-circle me-2" width="40" height="40">
+                                <img src="https://picsum.photos/id/1025/40" alt="Suggestion" class="rounded-circle me-2"
+                                    width="40" height="40">
                                 <div>
                                     <p class="mb-0 fw-bold">elifnaz</p>
                                     <small class="text-muted">Seni takip ediyor</small>
@@ -137,4 +146,5 @@
     <!-- Bootstrap JS for any JavaScript components -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 </body>
+
 </html>
