--- a/05-WeekFive/tailwindCSS-landingPage/index.html
+++ b/05-WeekFive/tailwindCSS-landingPage/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -22,14 +23,17 @@
     </script>
     <style>
         @import url('https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;600;700&display=swap');
+
         html {
             scroll-behavior: smooth;
         }
+
         body {
             font-family: 'Open Sans', sans-serif;
         }
     </style>
 </head>
+
 <body class="bg-background text-text">
     <!-- Header with fixed navigation -->
     <header class="bg-primary text-white shadow-md fixed w-full z-10">
@@ -41,7 +45,8 @@
                 <a href="#projects" class="hover:text-secondary">Projects</a>
                 <a href="#contact" class="hover:text-secondary">Contact</a>
             </div>
-            <button class="bg-accent text-white px-4 py-2 rounded-md hover:bg-opacity-90 transition duration-300">Free Consultation</button>
+            <button class="bg-accent text-white px-4 py-2 rounded-md hover:bg-opacity-90 transition duration-300">Free
+                Consultation</button>
         </nav>
     </header>
 
@@ -50,7 +55,9 @@
         <div class="container mx-auto px-6 text-center">
             <h1 class="text-4xl md:text-6xl font-bold mb-4">Innovate with EmreTech</h1>
             <p class="text-xl mb-8">Cutting-edge technology solutions for the modern world.</p>
-            <a href="#contact" class="bg-accent text-white px-6 py-3 rounded-md font-semibold hover:bg-opacity-90 transition duration-300">Get Started</a>
+            <a href="#contact"
+                class="bg-accent text-white px-6 py-3 rounded-md font-semibold hover:bg-opacity-90 transition duration-300">Get
+                Started</a>
         </div>
     </section>
 
@@ -61,19 +68,22 @@
             <div class="grid md:grid-cols-3 gap-12">
                 <!-- AI Solutions Card -->
                 <div class="bg-background p-6 rounded-lg shadow-md">
-                    <img src="https://picsum.photos/seed/ai/300/200" alt="Artificial Intelligence" class="w-full h-40 object-cover rounded-md mb-4">
+                    <img src="https://picsum.photos/seed/ai/300/200" alt="Artificial Intelligence"
+                        class="w-full h-40 object-cover rounded-md mb-4">
                     <h3 class="text-xl font-semibold mb-2 text-secondary">AI Solutions</h3>
                     <p class="text-text">Transforming businesses with advanced AI technologies.</p>
                 </div>
                 <!-- Cloud Computing Card -->
                 <div class="bg-background p-6 rounded-lg shadow-md">
-                    <img src="https://picsum.photos/seed/cloud/300/200" alt="Cloud Computing" class="w-full h-40 object-cover rounded-md mb-4">
+                    <img src="https://picsum.photos/seed/cloud/300/200" alt="Cloud Computing"
+                        class="w-full h-40 object-cover rounded-md mb-4">
                     <h3 class="text-xl font-semibold mb-2 text-secondary">Cloud Services</h3>
                     <p class="text-text">Scalable and secure cloud infrastructure for your needs.</p>
                 </div>
                 <!-- Cybersecurity Card -->
                 <div class="bg-background p-6 rounded-lg shadow-md">
-                    <img src="https://picsum.photos/seed/security/300/200" alt="Cybersecurity" class="w-full h-40 object-cover rounded-md mb-4">
+                    <img src="https://picsum.photos/seed/security/300/200" alt="Cybersecurity"
+                        class="w-full h-40 object-cover rounded-md mb-4">
                     <h3 class="text-xl font-semibold mb-2 text-secondary">Cybersecurity</h3>
                     <p class="text-text">Protecting your digital assets with advanced security measures.</p>
                 </div>
@@ -88,13 +98,15 @@
             <div class="grid md:grid-cols-2 gap-12">
                 <!-- Smart City Project Card -->
                 <div class="bg-white p-6 rounded-lg shadow-md">
-                    <img src="https://picsum.photos/seed/project1/400/250" alt="Project 1" class="w-full h-56 object-cover rounded-md mb-4">
+                    <img src="https://picsum.photos/seed/project1/400/250" alt="Project 1"
+                        class="w-full h-56 object-cover rounded-md mb-4">
                     <h3 class="text-xl font-semibold mb-2 text-secondary">Smart City Infrastructure</h3>
                     <p class="text-text">Revolutionizing urban living with IoT and AI integration.</p>
                 </div>
                 <!-- Fintech Platform Card -->
                 <div class="bg-white p-6 rounded-lg shadow-md">
-                    <img src="https://picsum.photos/seed/project2/400/250" alt="Project 2" class="w-full h-56 object-cover rounded-md mb-4">
+                    <img src="https://picsum.photos/seed/project2/400/250" alt="Project 2"
+                        class="w-full h-56 object-cover rounded-md mb-4">
                     <h3 class="text-xl font-semibold mb-2 text-secondary">Next-Gen Fintech Platform</h3>
                     <p class="text-text">Secure and efficient financial solutions for the digital age.</p>
                 </div>
@@ -108,10 +120,15 @@
             <h2 class="text-3xl font-bold text-center mb-12">Get in Touch</h2>
             <div class="max-w-lg mx-auto">
                 <form class="space-y-4">
-                    <input type="text" placeholder="Your Name" class="w-full px-4 py-2 rounded-md bg-white text-text border border-gray-300 focus:outline-none focus:border-accent">
-                    <input type="email" placeholder="Your Email" class="w-full px-4 py-2 rounded-md bg-white text-text border border-gray-300 focus:outline-none focus:border-accent">
-                    <textarea placeholder="Your Message" rows="4" class="w-full px-4 py-2 rounded-md bg-white text-text border border-gray-300 focus:outline-none focus:border-accent"></textarea>
-                    <button type="submit" class="bg-accent text-white px-6 py-3 rounded-md font-semibold hover:bg-opacity-90 transition duration-300 w-full">Send Message</button>
+                    <input type="text" placeholder="Your Name"
+                        class="w-full px-4 py-2 rounded-md bg-white text-text border border-gray-300 focus:outline-none focus:border-accent">
+                    <input type="email" placeholder="Your Email"
+                        class="w-full px-4 py-2 rounded-md bg-white text-text border border-gray-300 focus:outline-none focus:border-accent">
+                    <textarea placeholder="Your Message" rows="4"
+                        class="w-full px-4 py-2 rounded-md bg-white text-text border border-gray-300 focus:outline-none focus:border-accent"></textarea>
+                    <button type="submit"
+                        class="bg-accent text-white px-6 py-3 rounded-md font-semibold hover:bg-opacity-90 transition duration-300 w-full">Send
+                        Message</button>
                 </form>
             </div>
         </div>
@@ -141,13 +158,25 @@
                     <h4 class="text-lg font-semibold mb-4">Connect With Us</h4>
                     <div class="flex space-x-4">
                         <a href="#" class="text-gray-300 hover:text-secondary">
-                            <svg class="w-6 h-6" fill="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><path d="M24 4.557c-.883.392-1.832.656-2.828.775 1.017-.609 1.798-1.574 2.165-2.724-.951.564-2.005.974-3.127 1.195-.897-.957-2.178-1.555-3.594-1.555-3.179 0-5.515 2.966-4.797 6.045-4.091-.205-7.719-2.165-10.148-5.144-1.29 2.213-.669 5.108 1.523 6.574-.806-.026-1.566-.247-2.229-.616-.054 2.281 1.581 4.415 3.949 4.89-.693.188-1.452.232-2.224.084.626 1.956 2.444 3.379 4.6 3.419-2.07 1.623-4.678 2.348-7.29 2.04 2.179 1.397 4.768 2.212 7.548 2.212 9.142 0 14.307-7.721 13.995-14.646.962-.695 1.797-1.562 2.457-2.549z"/></svg>
+                            <svg class="w-6 h-6" fill="currentColor" viewBox="0 0 24 24"
+                                xmlns="http://www.w3.org/2000/svg">
+                                <path
+                                    d="M24 4.557c-.883.392-1.832.656-2.828.775 1.017-.609 1.798-1.574 2.165-2.724-.951.564-2.005.974-3.127 1.195-.897-.957-2.178-1.555-3.594-1.555-3.179 0-5.515 2.966-4.797 6.045-4.091-.205-7.719-2.165-10.148-5.144-1.29 2.213-.669 5.108 1.523 6.574-.806-.026-1.566-.247-2.229-.616-.054 2.281 1.581 4.415 3.949 4.89-.693.188-1.452.232-2.224.084.626 1.956 2.444 3.379 4.6 3.419-2.07 1.623-4.678 2.348-7.29 2.04 2.179 1.397 4.768 2.212 7.548 2.212 9.142 0 14.307-7.721 13.995-14.646.962-.695 1.797-1.562 2.457-2.549z" />
+                            </svg>
                         </a>
                         <a href="#" class="text-gray-300 hover:text-secondary">
-                            <svg class="w-6 h-6" fill="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><path d="M12 0c-6.626 0-12 5.373-12 12 0 5.302 3.438 9.8 8.207 11.387.599.111.793-.261.793-.577v-2.234c-3.338.726-4.033-1.416-4.033-1.416-.546-1.387-1.333-1.756-1.333-1.756-1.089-.745.083-.729.083-.729 1.205.084 1.839 1.237 1.839 1.237 1.07 1.834 2.807 1.304 3.492.997.107-.775.418-1.305.762-1.604-2.665-.305-5.467-1.334-5.467-5.931 0-1.311.469-2.381 1.236-3.221-.124-.303-.535-1.524.117-3.176 0 0 1.008-.322 3.301 1.23.957-.266 1.983-.399 3.003-.404 1.02.005 2.047.138 3.006.404 2.291-1.552 3.297-1.23 3.297-1.23.653 1.653.242 2.874.118 3.176.77.84 1.235 1.911 1.235 3.221 0 4.609-2.807 5.624-5.479 5.921.43.372.823 1.102.823 2.222v3.293c0 .319.192.694.801.576 4.765-1.589 8.199-6.086 8.199-11.386 0-6.627-5.373-12-12-12z"/></svg>
+                            <svg class="w-6 h-6" fill="currentColor" viewBox="0 0 24 24"
+                                xmlns="http://www.w3.org/2000/svg">
+                                <path
+                                    d="M12 0c-6.626 0-12 5.373-12 12 0 5.302 3.438 9.8 8.207 11.387.599.111.793-.261.793-.577v-2.234c-3.338.726-4.033-1.416-4.033-1.416-.546-1.387-1.333-1.756-1.333-1.756-1.089-.745.083-.729.083-.729 1.205.084 1.839 1.237 1.839 1.237 1.07 1.834 2.807 1.304 3.492.997.107-.775.418-1.305.762-1.604-2.665-.305-5.467-1.334-5.467-5.931 0-1.311.469-2.381 1.236-3.221-.124-.303-.535-1.524.117-3.176 0 0 1.008-.322 3.301 1.23.957-.266 1.983-.399 3.003-.404 1.02.005 2.047.138 3.006.404 2.291-1.552 3.297-1.23 3.297-1.23.653 1.653.242 2.874.118 3.176.77.84 1.235 1.911 1.235 3.221 0 4.609-2.807 5.624-5.479 5.921.43.372.823 1.102.823 2.222v3.293c0 .319.192.694.801.576 4.765-1.589 8.199-6.086 8.199-11.386 0-6.627-5.373-12-12-12z" />
+                            </svg>
                         </a>
                         <a href="#" class="text-gray-300 hover:text-secondary">
-                            <svg class="w-6 h-6" fill="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><path d="M19 0h-14c-2.761 0-5 2.239-5 5v14c0 2.761 2.239 5 5 5h14c2.762 0 5-2.239 5-5v-14c0-2.761-2.238-5-5-5zm-11 19h-3v-11h3v11zm-1.5-12.268c-.966 0-1.75-.79-1.75-1.764s.784-1.764 1.75-1.764 1.75.79 1.75 1.764-.783 1.764-1.75 1.764zm13.5 12.268h-3v-5.604c0-3.368-4-3.113-4 0v5.604h-3v-11h3v1.765c1.396-2.586 7-2.777 7 2.476v6.759z"/></svg>
+                            <svg class="w-6 h-6" fill="currentColor" viewBox="0 0 24 24"
+                                xmlns="http://www.w3.org/2000/svg">
+                                <path
+                                    d="M19 0h-14c-2.761 0-5 2.239-5 5v14c0 2.761 2.239 5 5 5h14c2.762 0 5-2.239 5-5v-14c0-2.761-2.238-5-5-5zm-11 19h-3v-11h3v11zm-1.5-12.268c-.966 0-1.75-.79-1.75-1.764s.784-1.764 1.75-1.764 1.75.79 1.75 1.764-.783 1.764-1.75 1.764zm13.5 12.268h-3v-5.604c0-3.368-4-3.113-4 0v5.604h-3v-11h3v1.765c1.396-2.586 7-2.777 7 2.476v6.759z" />
+                            </svg>
                         </a>
                     </div>
                 </div>
@@ -158,4 +187,5 @@
         </div>
     </footer>
 </body>
+
 </html>
