--- a/05-WeekFive/tailwindCSS-reviewPage/index.html
+++ b/05-WeekFive/tailwindCSS-reviewPage/index.html
@@ -1,11 +1,13 @@
 <!DOCTYPE html>
 <html lang="en" class="scroll-smooth">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>EmreAI - Customer Reviews</title>
     <script src="https://cdn.tailwindcss.com"></script>
-    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap"
+        rel="stylesheet">
     <script src="https://unpkg.com/feather-icons"></script>
     <style>
         body {
@@ -13,6 +15,7 @@
         }
     </style>
 </head>
+
 <body class="bg-gradient-to-b from-gray-100 to-white">
     <!-- Header -->
     <header class="bg-indigo-600 text-white fixed w-full z-10">
@@ -28,8 +31,10 @@
                 <a href="#submit-review" class="hover:text-indigo-200">Submit Review</a>
                 <a href="#contact" class="hover:text-indigo-200">Contact Us</a>
                 <div class="relative">
-                    <input type="text" placeholder="Search reviews" class="bg-indigo-500 text-white placeholder-indigo-200 px-4 py-1 rounded-full focus:outline-none focus:ring-2 focus:ring-indigo-300">
-                    <i data-feather="search" class="w-5 h-5 text-indigo-200 absolute right-3 top-1/2 transform -translate-y-1/2"></i>
+                    <input type="text" placeholder="Search reviews"
+                        class="bg-indigo-500 text-white placeholder-indigo-200 px-4 py-1 rounded-full focus:outline-none focus:ring-2 focus:ring-indigo-300">
+                    <i data-feather="search"
+                        class="w-5 h-5 text-indigo-200 absolute right-3 top-1/2 transform -translate-y-1/2"></i>
                 </div>
             </div>
         </nav>
@@ -58,13 +63,15 @@
                     <!-- Featured Review Card 1 -->
                     <div class="bg-white rounded-lg shadow-md p-6 flex flex-col">
                         <div class="flex items-center mb-4">
-                            <img src="https://randomuser.me/api/portraits/women/32.jpg" alt="Sarah L." class="w-12 h-12 rounded-full mr-4">
+                            <img src="https://randomuser.me/api/portraits/women/32.jpg" alt="Sarah L."
+                                class="w-12 h-12 rounded-full mr-4">
                             <div>
                                 <h3 class="font-semibold text-lg">Sarah L.</h3>
                                 <p class="text-gray-600">Marketing Manager</p>
                             </div>
                         </div>
-                        <p class="text-gray-700 mb-4">"EmreAI has revolutionized our content creation process. It's like having an expert copywriter available 24/7!"</p>
+                        <p class="text-gray-700 mb-4">"EmreAI has revolutionized our content creation process. It's like
+                            having an expert copywriter available 24/7!"</p>
                         <div class="mt-auto flex items-center">
                             <div class="text-yellow-400 flex">★★★★★</div>
                             <span class="ml-2 text-gray-600">5.0</span>
@@ -73,13 +80,15 @@
                     <!-- Featured Review Card 2 -->
                     <div class="bg-white rounded-lg shadow-md p-6 flex flex-col">
                         <div class="flex items-center mb-4">
-                            <img src="https://randomuser.me/api/portraits/men/45.jpg" alt="John D." class="w-12 h-12 rounded-full mr-4">
+                            <img src="https://randomuser.me/api/portraits/men/45.jpg" alt="John D."
+                                class="w-12 h-12 rounded-full mr-4">
                             <div>
                                 <h3 class="font-semibold text-lg">John D.</h3>
                                 <p class="text-gray-600">Software Engineer</p>
                             </div>
                         </div>
-                        <p class="text-gray-700 mb-4">"The code assistance feature in EmreAI is a game-changer. It's helped me improve my coding efficiency by at least 30%."</p>
+                        <p class="text-gray-700 mb-4">"The code assistance feature in EmreAI is a game-changer. It's
+                            helped me improve my coding efficiency by at least 30%."</p>
                         <div class="mt-auto flex items-center">
                             <div class="text-yellow-400 flex">★★★★★</div>
                             <span class="ml-2 text-gray-600">5.0</span>
@@ -88,13 +97,15 @@
                     <!-- Featured Review Card 3 -->
                     <div class="bg-white rounded-lg shadow-md p-6 flex flex-col">
                         <div class="flex items-center mb-4">
-                            <img src="https://randomuser.me/api/portraits/women/68.jpg" alt="Emily R." class="w-12 h-12 rounded-full mr-4">
+                            <img src="https://randomuser.me/api/portraits/women/68.jpg" alt="Emily R."
+                                class="w-12 h-12 rounded-full mr-4">
                             <div>
                                 <h3 class="font-semibold text-lg">Emily R.</h3>
                                 <p class="text-gray-600">Data Analyst</p>
                             </div>
                         </div>
-                        <p class="text-gray-700 mb-4">"EmreAI's data analysis capabilities are impressive. It helps me uncover insights I might have missed otherwise."</p>
+                        <p class="text-gray-700 mb-4">"EmreAI's data analysis capabilities are impressive. It helps me
+                            uncover insights I might have missed otherwise."</p>
                         <div class="mt-auto flex items-center">
                             <div class="text-yellow-400 flex">★★★★<span class="text-gray-300">★</span></div>
                             <span class="ml-2 text-gray-600">4.0</span>
@@ -143,14 +154,19 @@
                 <h2 class="text-3xl font-bold text-center text-indigo-800 mb-12">Submit Your Review</h2>
                 <div class="max-w-lg mx-auto">
                     <form class="space-y-4">
-                        <input type="text" placeholder="Your Name" class="w-full px-4 py-2 rounded-md border border-indigo-300 focus:outline-none focus:ring-2 focus:ring-indigo-500">
-                        <input type="email" placeholder="Your Email" class="w-full px-4 py-2 rounded-md border border-indigo-300 focus:outline-none focus:ring-2 focus:ring-indigo-500">
-                        <textarea placeholder="Your Review" rows="4" class="w-full px-4 py-2 rounded-md border border-indigo-300 focus:outline-none focus:ring-2 focus:ring-indigo-500"></textarea>
+                        <input type="text" placeholder="Your Name"
+                            class="w-full px-4 py-2 rounded-md border border-indigo-300 focus:outline-none focus:ring-2 focus:ring-indigo-500">
+                        <input type="email" placeholder="Your Email"
+                            class="w-full px-4 py-2 rounded-md border border-indigo-300 focus:outline-none focus:ring-2 focus:ring-indigo-500">
+                        <textarea placeholder="Your Review" rows="4"
+                            class="w-full px-4 py-2 rounded-md border border-indigo-300 focus:outline-none focus:ring-2 focus:ring-indigo-500"></textarea>
                         <div class="flex items-center">
                             <span class="mr-2">Your Rating:</span>
                             <div class="text-yellow-400 text-2xl">★★★★★</div>
                         </div>
-                        <button type="submit" class="w-full bg-indigo-600 text-white px-6 py-3 rounded-md font-semibold hover:bg-indigo-700 transition duration-300">Submit Review</button>
+                        <button type="submit"
+                            class="w-full bg-indigo-600 text-white px-6 py-3 rounded-md font-semibold hover:bg-indigo-700 transition duration-300">Submit
+                            Review</button>
                     </form>
                 </div>
             </div>
@@ -167,16 +183,22 @@
                         <div class="space-y-2">
                             <p class="flex items-center"><i data-feather="mail" class="mr-2"></i> support@emreai.com</p>
                             <p class="flex items-center"><i data-feather="phone" class="mr-2"></i> +1 (555) 123-4567</p>
-                            <p class="flex items-center"><i data-feather="map-pin" class="mr-2"></i> 123 AI Street, Tech City, TC 12345</p>
+                            <p class="flex items-center"><i data-feather="map-pin" class="mr-2"></i> 123 AI Street, Tech
+                                City, TC 12345</p>
                         </div>
                     </div>
                     <div>
                         <h3 class="text-xl font-semibold mb-4">Send Us a Message</h3>
                         <form class="space-y-4">
-                            <input type="text" placeholder="Your Name" class="w-full px-4 py-2 rounded-md border border-indigo-300 focus:outline-none focus:ring-2 focus:ring-indigo-500">
-                            <input type="email" placeholder="Your Email" class="w-full px-4 py-2 rounded-md border border-indigo-300 focus:outline-none focus:ring-2 focus:ring-indigo-500">
-                            <textarea placeholder="Your Message" rows="4" class="w-full px-4 py-2 rounded-md border border-indigo-300 focus:outline-none focus:ring-2 focus:ring-indigo-500"></textarea>
-                            <button type="submit" class="bg-indigo-600 text-white px-6 py-3 rounded-md font-semibold hover:bg-indigo-700 transition duration-300">Send Message</button>
+                            <input type="text" placeholder="Your Name"
+                                class="w-full px-4 py-2 rounded-md border border-indigo-300 focus:outline-none focus:ring-2 focus:ring-indigo-500">
+                            <input type="email" placeholder="Your Email"
+                                class="w-full px-4 py-2 rounded-md border border-indigo-300 focus:outline-none focus:ring-2 focus:ring-indigo-500">
+                            <textarea placeholder="Your Message" rows="4"
+                                class="w-full px-4 py-2 rounded-md border border-indigo-300 focus:outline-none focus:ring-2 focus:ring-indigo-500"></textarea>
+                            <button type="submit"
+                                class="bg-indigo-600 text-white px-6 py-3 rounded-md font-semibold hover:bg-indigo-700 transition duration-300">Send
+                                Message</button>
                         </form>
                     </div>
                 </div>
@@ -205,3 +227,12 @@
                     <h5 class="text-xl font-bold mb-4">Legal</h5>
                     <ul class="space-y-2">
                         <li><a href="#" class="text-gray-400 hover:text-white">Privacy Policy</a></li>
+                    </ul>
+                </div>
+            </div>
+        </div>
+    </footer>
+
+</body>
+
+</html>
